Fixed layout bug in raidModal etc

--- a/public/components/layout/modals/raidModal.css
+++ b/public/components/layout/modals/raidModal.css
@@ -1,5 +1,6 @@
 .raid-modal {
   padding-bottom: 0;
+  position: relative;
 }
 
 .raid-times {
@@ -29,7 +30,6 @@
   position: relative;
   margin-bottom: 20px;
   overflow: hidden;
-  height: 200px;
   border-radius: 6px;
 }
 
@@ -42,12 +42,14 @@
   line-height: 2vh;
   padding-bottom: 10px;
   text-transform: uppercase;
+  margin-top: 60px;
 }
 
 .raid-instance-web__img {
   position: absolute;
   z-index: -1;
   height: 100%;
+  width: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -78,14 +80,15 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: 120px;
   background-color: rgba(0, 0, 0, 0.7);
-  margin-bottom: 2vh;
+  margin-bottom: 60px;
 }
 
 .raid-boss {
   margin-left: 5px;
   margin-right: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
