--- a/public/components/layout/newsFeed/newsFeed.css
+++ b/public/components/layout/newsFeed/newsFeed.css
@@ -10,7 +10,7 @@
 }
 
 .news-feed__items {
-  z-index: 1;
+  z-index: 3;
 }
 
 .news-feed__background {
